--- a/package.json
+++ b/package.json
@@ -13,5 +13,18 @@
     "http-errors": "~1.6.2",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0"
-  }
+  },
+  "main": "app.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/anubiskhan/quantified-self-express.git"
+  },
+  "author": "Kelly Schroeder",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/anubiskhan/quantified-self-express/issues"
+  },
+  "homepage": "https://github.com/anubiskhan/quantified-self-express#readme",
+  "description": ""
 }
