Adds engine to packages.json

--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "bugs": {
     "url": "https://github.com/anubiskhan/quantified-self-express/issues"
   },
+  "engines": {
+    "node": "8.11.3"
+  },
   "homepage": "https://github.com/anubiskhan/quantified-self-express#readme",
   "description": ""
 }
