--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "knex": "^0.14.6",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
-    "pg": "^7.4.3"
+    "pg": "^7.4.3",
+    "pryjs": "^1.0.3"
   },
   "main": "app.js",
   "devDependencies": {},
