--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "chai": "^4.1.2",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
     "debug": "~2.6.9",
@@ -13,6 +14,7 @@
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "knex": "^0.14.6",
+    "mocha": "^5.2.0",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.11.0",
     "pg": "^7.4.3",
