--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "knex": "^0.14.6",
     "mocha": "^5.2.0",
     "morgan": "~1.9.0",
+    "node-fetch": "^2.1.2",
     "node-sass-middleware": "0.11.0",
     "pg": "^7.4.3",
     "pryjs": "^1.0.3"
